--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -10,3 +10,7 @@ a{
 	color:#000;
 	text-decoration:none;
 }
+a,input,select,textarea,button{
+	outline:none;
+	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+}
